--- a/css/comm.css
+++ b/css/comm.css
@@ -18,7 +18,7 @@ input {
 html,
 body {
 	font-size: 100% font-family: 'Verdana', 'Arial';
-	color: rgba(0, 0, 0, 1);
+	color: rgba(0, 0, 0, 0.5);
 	font: normal 100% Helvetica, Arial, sans-serif;
 }
 
@@ -26,7 +26,7 @@ body {
 	width: 100%;
 	height: 100%;
 	position: relative;
-	background-image: url(../image/011.jpg);
+	background-image: url(../image/0.jpg);
 	background-position: center top;
 	background-size: cover;
 }
@@ -38,7 +38,7 @@ body {
 	top: 15%;
 	left: 12%;
 	border-radius: 8px;
-	box-shadow: 0 10px 20px rgba(0, 0, 0, 1);
+	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.8);
 	overflow: hidden;
 	z-index: 2;
 	padding: 20px;
@@ -59,7 +59,7 @@ body {
 	filter: blur(5px);
 	z-index: -3;
 	margin: -30px;
-	background-image: url(../image/0.jpg);
+	background-image: url(../image/beijing.jpg);
 	background-position: center top;
 	background-size: cover;
 	background-attachment: fixed;
