--- a/css/comm.css
+++ b/css/comm.css
@@ -76,13 +76,13 @@ body {
 	font-size: 1em;
 	text-align: center;
 	margin-bottom: 10px;
-	color: white;
+	color: yellow;
 }
 .content h4 {
 	font-size: 0.8em;
 	text-align: center;
 	margin-bottom: 10px;
-	color: white;
+	color: yellow;
 }
 .content h5 {
 	font-size: 0.6em;
@@ -101,13 +101,13 @@ body {
 	font-size: 1.0em;
 	text-indent: 0.4em;
 	line-height: 1.7;
-	color: white;
+	color: yellow;
 	text-align: center;
 }
 
 a:link,
 a:visited {
-	color: #fff;
+	color: #DAA520;
 	text-decoration: none;
 }
 
