--- a/css/comm.css
+++ b/css/comm.css
@@ -76,13 +76,13 @@ body {
 	font-size: 1em;
 	text-align: center;
 	margin-bottom: 10px;
-	color: black;
+	color: white;
 }
 .content h4 {
 	font-size: 0.8em;
 	text-align: center;
 	margin-bottom: 10px;
-	color: black;
+	color: white;
 }
 .content h5 {
 	font-size: 0.6em;
@@ -101,7 +101,7 @@ body {
 	font-size: 1.0em;
 	text-indent: 0.4em;
 	line-height: 1.7;
-	color: black;
+	color: white;
 	text-align: center;
 }
 
